test/functions/lydia/warning-about-missing-return-with-externs.good
warning-about-missing-return-with-externs.chpl:5: In function 'foo':
warning-about-missing-return-with-externs.chpl:5: error: control reaches end of function that returns a value
